// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip className api can be overridden 1`] = `
<span
  class="my-dope-class top"
  id="my-component-tooltip"
  style="--triangle-height: 8px; left: 0px; top: -128px;"
>
  Help Text
</span>
`;

exports[`tooltip direction api allows bottom 1`] = `
<span
  class="tooltip bottom"
  id="my-component-tooltip"
  style="--triangle-height: 8px; left: 0px; top: 128px;"
>
  Help Text
</span>
`;

exports[`tooltip direction api allows left 1`] = `
<span
  class="tooltip left"
  id="my-component-tooltip"
  style="--triangle-height: 8px; left: -128px; top: 0px;"
>
  Help Text
</span>
`;

exports[`tooltip direction api allows right 1`] = `
<span
  class="tooltip right"
  id="my-component-tooltip"
  style="--triangle-height: 8px; left: 128px; top: 0px;"
>
  Help Text
</span>
`;

exports[`tooltip direction api allows top 1`] = `
<span
  class="tooltip top"
  id="my-component-tooltip"
  style="--triangle-height: 8px; left: 0px; top: -128px;"
>
  Help Text
</span>
`;

exports[`tooltip has defaults 1`] = `
<body>
  <div>
    <div
      class="wrapper"
      tabindex="0"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip has defaults 2`] = `
<body>
  <div>
    <div
      class="wrapper"
      tabindex="0"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
  <span
    class="tooltip top"
    id="my-component-tooltip"
    style="--triangle-height: 8px; left: 0px; top: -128px;"
  >
    Help Text
  </span>
</body>
`;

exports[`tooltip variant api renders the light variant tooltip 1`] = `
<span
  class="tooltipLight top"
  id="my-component-tooltip"
  style="--triangle-height: 8px; left: 0px; top: -128px;"
>
  Help Text
</span>
`;
